objects/amc__Time_Log__c.object
<CustomObject>
    <description>Enables project team members to log time against Actions</description>
    <fields>
        <fullName>ProfessionalServiceConsumption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to link the log to the consumption in order to enable updates. should be filled by a trigger.</description>
        <inlineHelpText>Field to link the log to the consumption in order to enable updates. should be filled by a trigger.</inlineHelpText>
        <label>Professional Service Consumption</label>
        <referenceTo>Professional_Service_Consumption__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>TimeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Action_Name__c</fullName>
        <formula>amc__Action__r.amc__Action_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Action Name from the Action this Time Log relates to</inlineHelpText>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action__c</fullName>
        <inlineHelpText>Select the Action this Time Log relates to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Approval_Date_Stamp__c</fullName>
        <description>Updated by a trigger, the first date the record was marked as approved.</description>
        <label>Approval Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Approval_Date__c</fullName>
        <formula>IF( ISPICKVAL(amc__Approval_Status__c, &apos;Approved&apos;), IF( NOT(ISNULL(amc__Approval_Date_Stamp__c)),amc__Approval_Date_Stamp__c,amc__Date__c),null  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the Time Log record was approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Approval_Status__c</fullName>
        <inlineHelpText>Identifies the Approval Status of this Time Log based on the Role Manager Approval Status and Project Owner Approval Status values</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Billable_Hours_Completed__c</fullName>
        <formula>IF(!amc__Non_Billable_Indicator__c , amc__Hours_Completed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Billing Event Item record this Time Log was invoiced on</inlineHelpText>
        <label>Billing Event Item</label>
        <referenceTo>amc__Billing_Event_Item__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Case this Time Log relates to</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Checklist Item this Time Log relates to</inlineHelpText>
        <label>Checklist Item</label>
        <referenceTo>amc__Checklist_Item__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Cost__c</fullName>
        <inlineHelpText>This field is used to track any monetary expenses relating to the action. (Previously Labelled Cost)</inlineHelpText>
        <label>Material Cost (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Date__c</fullName>
        <inlineHelpText>date the work was completed</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity_Indicator__c</fullName>
        <formula>If(amc__Action__r.amc__Exclude_from_Billable_Capacity_Indicator__c = TRUE, TRUE, amc__Exclude_from_Billable_Capacity__c)</formula>
        <inlineHelpText>Formula: Identifies if this Time Log should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if this Time Log should be excluded from Billable Capacity</description>
        <inlineHelpText>Identifies if this Time Log should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page_Indicator__c</fullName>
        <formula>OR( amc__Exclude_from_Client_Page__c,  amc__Action__r.amc__Exclude_from_Client_Page_Indicator__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies if this Time Log should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Time Log should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Billable__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Value of the Time Log based on the Billable Hourly Rate</inlineHelpText>
        <label>Hours Completed Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Value of the Time Log based on the Cost Hourly Rate</inlineHelpText>
        <label>Hours Completed Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed__c</fullName>
        <inlineHelpText>Shows the number of hours spent on the Action during this Time Log</inlineHelpText>
        <label>Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the Time Log has been included in a Billing Event</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Issue this Time Log relates to</inlineHelpText>
        <label>Issue</label>
        <referenceTo>amc__Issue__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Material_Cost_Cost__c</fullName>
        <inlineHelpText>Identifies the cost value of any Material Costs related to the Action</inlineHelpText>
        <label>Material Cost (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Id__c</fullName>
        <formula>CASESAFEID(amc__Action__r.amc__Milestone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by trigger(s) to update Non Billable Tracker</inlineHelpText>
        <label>Milestone Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Name__c</fullName>
        <formula>amc__Action__r.amc__Milestone__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Milestone Name that the Action this Time Log relate to is part of</inlineHelpText>
        <label>Milestone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable_Indicator__c</fullName>
        <formula>IF(amc__Non_Billable__c = TRUE, TRUE, amc__Action__r.amc__Non_Billable_Indicator__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this Time Log is classified as Non Billable. If the Time Log &apos;Non Billable&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Action &apos;Non Billable&apos; Field.</inlineHelpText>
        <label>Non Billable Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable_Tracker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tracks the Non Billable Status of the Time Log taking into account the manual entry in the Non Billable field of this Time Log and any changes that may have occurred on the Non Billable Indicator field of the Parent Action</inlineHelpText>
        <label>Non Billable Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Time Log is Non Billable</inlineHelpText>
        <label>Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Notes__c</fullName>
        <inlineHelpText>Enter the details of what progress has been made on the Action during this Time Log</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the time being submitted is eligible to be calculated as overtime (subject to the Project being eligible for overtime)</inlineHelpText>
        <label>Overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Project_Id__c</fullName>
        <formula>CASESAFEID(amc__Action__r.amc__Milestone__r.amc__Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by trigger(s) to update Non_Billable_Tracker__c</inlineHelpText>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Member_Current_User__c</fullName>
        <formula>IF(amc__Project_Member__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Project Member. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
        <label>Project Member Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Project_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Project Member (Role) who this Time Log relates to</inlineHelpText>
        <label>Project Member</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Name__c</fullName>
        <formula>amc__Action__r.amc__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Project Name that the Action this Time Log relate to is part of</inlineHelpText>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Approval_Required__c</fullName>
        <formula>amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Project_Owner_Timesheet_Approval_Reqd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Approval_Status__c</fullName>
        <inlineHelpText>Identifies the Approval Status of this Time Log from the Project Owner</inlineHelpText>
        <label>Project Owner Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role record for the person that is Project Owner responsible for approving Time Logs for this project</inlineHelpText>
        <label>Project Owner Approver</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Time Logs (Project Owner Approver)</relationshipLabel>
        <relationshipName>Time_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Current_User__c</fullName>
        <formula>IF(amc__Project_Owner_Approver__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User is the User required to approve this Time Log as the Project Owner</inlineHelpText>
        <label>Project Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Rejection_Comments__c</fullName>
        <inlineHelpText>Identifies the reason the Project Owner rejected the Time Log</inlineHelpText>
        <label>Project Owner Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Approval_Required__c</fullName>
        <description>Used by TimeLog trigger, saves query up to Project object.</description>
        <formula>amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Role_Manager_Timesheet_Approval_Reqd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Manager Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Approval_Status__c</fullName>
        <inlineHelpText>Identifies the Approval Status of this Time Log from the Role Manager</inlineHelpText>
        <label>Role Manager Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role record for the person that is the Role Manager responsible for approving Time Logs for this person</inlineHelpText>
        <label>Role Manager Approver</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Time Logs (Role Manager Approver)</relationshipLabel>
        <relationshipName>Time_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Current_User__c</fullName>
        <formula>IF(amc__Role_Manager_Approver__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User is the User required to approve this Time Log as the Role Manager</inlineHelpText>
        <label>Role Manager Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Rejection_Comments__c</fullName>
        <inlineHelpText>Identifies the reason the Role Manager rejected the Time Log</inlineHelpText>
        <label>Role Manager Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Skill_Id__c</fullName>
        <description>Used by Mission Control trigger to minimise query use.</description>
        <formula>amc__Action__r.amc__Skill__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Skill_Name__c</fullName>
        <description>Used by Mission Control trigger to minimise query use.</description>
        <formula>amc__Action__r.amc__Skill_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Start_Time__c</fullName>
        <description>Used by the Start/Stop functionality in the TimeLog1 &amp; 2 Interfaces.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amc__Stop_Time__c</fullName>
        <description>Used by the Start/Stop functionality in the TimeLog1 &amp; 2 Interfaces.</description>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amc__Time_Log_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Time Log</inlineHelpText>
        <label>Time Log Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Time_Log_Type__c</fullName>
        <description>It is recommended that you add your own values in to this picklist field</description>
        <inlineHelpText>Can be used to identify the type / category of the Time Log</inlineHelpText>
        <label>Time Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Trigger_Check__c</fullName>
        <description>Used by the trigger to determine if a tracked field is changed.</description>
        <formula>TEXT(amc__Hours_Completed__c) &amp; IF(amc__Non_Billable__c, &apos;true&apos;,&apos;false&apos;) &amp; amc__Project_Member__c  &amp;IF(amc__Overtime__c,&apos;true&apos;,&apos;false&apos;) &amp;IF(amc__Non_Billable_Tracker__c, &apos;true&apos;,&apos;false&apos;) &amp; TEXT(amc__Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Check</label>
        <type>Text</type>
    </fields>
    <label>Time Log</label>
    <listViews>
        <fullName>All_Time_Logs_Requiring_Approval</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>amc__Project_Member__c</columns>
        <columns>amc__Date__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <columns>amc__Notes__c</columns>
        <columns>amc__Role_Manager_Approver__c</columns>
        <columns>amc__Role_Manager_Approval_Status__c</columns>
        <columns>amc__Role_Manager_Rejection_Comments__c</columns>
        <columns>amc__Project_Owner_Approver__c</columns>
        <columns>amc__Project_Owner_Approval_Status__c</columns>
        <columns>amc__Project_Owner_Rejection_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Role_Manager_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>amc__Project_Owner_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <label>All Time Logs Requiring Approval</label>
    </listViews>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Action__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <columns>amc__Non_Billable__c</columns>
        <columns>amc__Time_Log_Notes_RT__c</columns>
        <columns>amc__Project_Member__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>amc__Date__c</columns>
        <columns>amc__Project_Id__c</columns>
        <columns>amc__Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>amc__Time_Logs_Requiring_My_Approval</fullName>
        <booleanFilter>(1 AND 3) OR (2 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>amc__Project_Member__c</columns>
        <columns>amc__Date__c</columns>
        <columns>amc__Hours_Completed__c</columns>
        <columns>amc__Notes__c</columns>
        <columns>amc__Role_Manager_Approver__c</columns>
        <columns>amc__Role_Manager_Approval_Status__c</columns>
        <columns>amc__Role_Manager_Rejection_Comments__c</columns>
        <columns>amc__Project_Owner_Approver__c</columns>
        <columns>amc__Project_Owner_Approval_Status__c</columns>
        <columns>amc__Project_Owner_Rejection_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Role_Manager_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>amc__Project_Owner_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>amc__Role_Manager_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>amc__Project_Owner_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Time Logs Requiring My Approval</label>
    </listViews>
    <nameField>
        <displayFormat>TLN-{00000000}</displayFormat>
        <label>Time Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>amc__Enforce_Approvals</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;), 

OR(

AND( 
amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Role_Manager_Timesheet_Approval_Reqd__c = TRUE, NOT(ISPICKVAL( amc__Role_Manager_Approval_Status__c , &quot;Approved&quot;))
),  

AND( 
amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Project_Owner_Timesheet_Approval_Reqd__c  , 
NOT(ISPICKVAL(  amc__Project_Owner_Approval_Status__c  , &quot;Approved&quot;))
)

))</errorConditionFormula>
        <errorMessage>You cannot set the Approval Status to Approved yet as either the Role Manager or Project Owner have not approved the Time Log</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Fixed_Price_Hours_Scheduled</fullName>
        <active>false</active>
        <description>Prevents Time Logs that are &apos;Billable&apos; being submitted if it will push the Hours Completed - Billable over the Hours Scheduled - Billable</description>
        <errorConditionFormula>OR(
    AND(ISNEW(), amc__Non_Billable_Tracker__c = FALSE, ISPICKVAL( amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;), amc__Action__r.amc__Hours_Completed__c + amc__Hours_Completed__c &gt; amc__Action__r.amc__Hours_Scheduled__c )
    ,
    AND(
        AND(ISCHANGED(amc__Hours_Completed__c), amc__Non_Billable_Tracker__c = FALSE, ISPICKVAL( amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;), (amc__Action__r.amc__Hours_Completed__c - PRIORVALUE(amc__Hours_Completed__c) + amc__Hours_Completed__c) &gt; amc__Action__r.amc__Hours_Scheduled__c  )
    )
)</errorConditionFormula>
        <errorMessage>This is a Fixed Price Project. Logging this billable time will exceed the Billable Hours Scheduled for this Action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Logged_Time</fullName>
        <active>true</active>
        <description>To validate that the stop time should be greater than the start time. so that, there will be no negative time logs.</description>
        <errorConditionFormula>amc__Stop_Time__c  &lt;  amc__Start_Time__c</errorConditionFormula>
        <errorMessage>Stop time should be greater than start time!</errorMessage>
    </validationRules>
</CustomObject>